# opensbi_interface

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README_8md.html  annotated.html  annotated_dup.js  classes.html  dir_000000_000001.html  dir_000002_000000.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a.js  dir_13e138d54eb8818da29c3992edef070a_dep.map  dir_13e138d54eb8818da29c3992edef070a_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.js  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_dup.js  globals_eval.html  globals_func.html  globals_h.html  globals_m.html  globals_s.html  globals_vars.html  graph_legend.html  index.html  main_8c.html  main_8c.js  main_8c__incl.map  main_8c__incl.md5  (+31 more)
.github/workflows/: workflow.yml
cmake/: 3rd.cmake  riscv64-gcc.cmake  x86_64-riscv64-gcc.cmake
doc/: CMakeLists.txt
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  defines_0.js  defines_1.js  enumvalues_0.js  enumvalues_1.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
src/: CMakeLists.txt  opensbi_interface.c
src/include/: opensbi_interface.h
test/: CMakeLists.txt  boot.S  fw_jump.elf  link.ld  main.c
